examples/invalid/013_missing_hook.jd
justification base {
    conclusion c is "A conclusion"
    strategy   s is "A strategy"
    evidence   e is "An evidence"
    s supports c
    e supports s
}

justification refinement {
    conclusion c is "elaborated"
    strategy   s is "A strategy"
    evidence   e is "An evidence"
    s supports c
    e supports s
}

justification bad is refine(base, refinement)
